# emoji-scripts

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
animation/: __init__.py  sparkle.py  waveflag.py
diagnostics/: apng-info.py  apng_info.py
